# iris

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README  README.md  go.mod  go.sum  iris_query_language.md  test.sh
database/: Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
database/src/: callistodb.rs  iris.rs  server.rs
database/src/aql/: context.rs  directive.rs  directives.rs  http.rs  mod.rs
database/src/conn/: http.rs
database/src/graph/: aggregation.rs  database.rs  graph.rs  mod.rs  node.rs  node_plane.rs
database/src/io/: filesystem.rs  mod.rs  page.rs
database/src/lib/: bson.rs  filesystem.rs  mod.rs  uid.rs
database/src/query/: directive.rs  directives.rs
database/src/query/http/: context.rs  directive.rs  directives.rs  mod.rs  server.rs
iris/: Cargo.toml  Makefile  rustfmt.toml
iris/src/: iris.rs
iris/src/conn/: mod.rs  response_builder.rs  server.rs
iris/src/database/: graph.rs  mod.rs  node.rs
iris/src/graph/: aggregation.rs  database.rs  node.rs
iris/src/io/: filesystem.rs  logger.rs  mod.rs  page.rs
iris/src/iql/: commands.rs  json.rs  keyword.rs  keywords.rs  mod.rs  response_builder.rs  session.rs
iris/src/lib/: bson.rs  bson_encoder.rs  json.rs  mod.rs  smart_json.rs
iris/src/log/: logger.rs  util.rs
iris/src/server/http/: errors.rs  (+4 more)
source/: Cargo.toml  Makefile  README.md  build.rs
source/router/: router.go
source/server/: Cargo.toml  Makefile  build.rs  rustfmt.toml
source/server/src/: iris.rs  test_setup.rs
source/src/: iris.rs  test_lifecycle.rs
source/src/graph/: aggregation.rs  database.rs  graph.rs  node.rs
source/src/io/: filesystem.rs  page.rs
source/src/iql/: lex.rs  mod.rs
source/src/lib/: bson.rs  mod.rs
source/src/log/: logger.rs  mod.rs
source/src/query/: directive.rs  directives.rs  mod.rs  queries.rs  query.rs
(+219 files in other folders)
