[package]
name = "iris"
version = "0.1.0"
authors = ["Esteban Garcia <estebangarcia2121@gmail.com>"]
edition = "2018"

[dependencies]
bson = "1.2.2"
serde = "1.0.125"
serde_json = "1.0"
encoding = "0.2.33"
encoding_rs_io = "0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.4"
tonic = "0.4.2"
rocket = "0.4.7"
ctor = "0.1.20"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[build-dependencies]
bindgen = "0.53.1"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

[[bin]]
name = "iris"
path = "src/iris.rs"
